--- a/4thpage.html
+++ b/4thpage.html
@@ -9,7 +9,7 @@
 <div class="'container">
     <div class ="Mochi-Cat"> 
 
-    <img src ="file:///C:/Users/Admin/Desktop/hmcode/images/loopingcat.gif" height="350" width="435" loop="infinite"> </img>
+    <img src ="images/loopingcat.gif" height="350" width="435" loop="infinite"> </img>
 </div>
 </div>
 
